--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "exrpess": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.11.0"
   }
 }
